--- a/q/44946.html
+++ b/q/44946.html
@@ -26,12 +26,45 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>134</td><td>Python 3</td><td>240716T082401Z</td><td><a href="https://codegolf.stackexchange.com/questions/44946/trucks-in-a-parking-lot/274193#274193">Jitse</a></td></tr>
-<tr d-ix="1"><td>229</td><td>Python3</td><td>240715T223722Z</td><td><a href="https://codegolf.stackexchange.com/questions/44946/trucks-in-a-parking-lot/274186#274186">Ajax1234</a></td></tr>
-<tr d-ix="2"><td>154</td><td>Python 2</td><td>150126T063449Z</td><td><a href="https://codegolf.stackexchange.com/questions/44946/trucks-in-a-parking-lot/44952#44952">Sp3000</a></td></tr>
-<tr d-ix="3"><td>196</td><td>Haskell</td><td>150126T045305Z</td><td><a href="https://codegolf.stackexchange.com/questions/44946/trucks-in-a-parking-lot/44948#44948">MtnViewM</a></td></tr>
+<tr d-ix="0"><td>217</td><td>Scala 3</td><td>240716T122025Z</td><td><a href="https://codegolf.stackexchange.com/questions/44946/trucks-in-a-parking-lot/274196#274196">138 Aspe</a></td></tr>
+<tr d-ix="1"><td>134</td><td>Python 3</td><td>240716T082401Z</td><td><a href="https://codegolf.stackexchange.com/questions/44946/trucks-in-a-parking-lot/274193#274193">Jitse</a></td></tr>
+<tr d-ix="2"><td>229</td><td>Python3</td><td>240715T223722Z</td><td><a href="https://codegolf.stackexchange.com/questions/44946/trucks-in-a-parking-lot/274186#274186">Ajax1234</a></td></tr>
+<tr d-ix="3"><td>154</td><td>Python 2</td><td>150126T063449Z</td><td><a href="https://codegolf.stackexchange.com/questions/44946/trucks-in-a-parking-lot/44952#44952">Sp3000</a></td></tr>
+<tr d-ix="4"><td>196</td><td>Haskell</td><td>150126T045305Z</td><td><a href="https://codegolf.stackexchange.com/questions/44946/trucks-in-a-parking-lot/44948#44948">MtnViewM</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 134 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.scala-lang.org/" rel="nofollow noreferrer">Scala 3</a>, 217 bytes</h1>
+<p>A port of <a href="http://pastebin.com/ugv4zujB" rel="nofollow noreferrer">@Etaoin Shrdlu's Python code</a> in Scala.</p>
+<p>217 bytes, it can be golfed more.</p>
+<hr />
+<p>Golfed version. <a href="https://ato.pxeger.com/run?1=fZC_TsMwEMb3PMUpHWoLx21aFQGpkToiAQtsCFWOScCp66SxW_5EfYW-AEsXWHiivg12G4YunG3Z33e_O9n-_DaCKz78eQgjXb7yWoePu3GZFpmwcMOlhuzNZvrJwKSqoAmCFVcgLtCVtuRv3dla6mfMLp0A9rW0eXS226GKzIgiC-c3K14DZwtqy2tpbOJlyiZ1zd9pLpVCM4yQIn2Mk7yskRxHfbAlzKIYN94oWoNTIz-ySOFG5sgJJUWGClKcKExFudQWTRnrdrp4nCKJ6dSV-wP7lyUFXifrhDNOK27FCzrUDsitVES5XErnvEJT346a5XzdPnATAPR6cJ8ZC4KbzDhduY-wSiOBTgnEBIYEwg51oxNi7On4CDonMDhAjqDUz5YbHHHxaA-O9iD14Vu6oC0-DNpbbbeH_Rc" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<pre class="lang-scala prettyprint-override"><code>(p,k,l,q)=&gt;{var a=q.toList;var b=Array.fill(k)((l,0));for(i&lt;-0 to k-1){for(j&lt;-0 to a.size-l){if(a.slice(j,j+l).count(_=='#')&lt;b(i)._1){b(i)=(a.slice(j,j+l).count(_=='#'),j)};};a=a.patch(b(i)._2,Nil,l)};b.map(_._1).sum}
+</code></pre>
+<p>Ungolfed version. <a href="https://ato.pxeger.com/run?1=jVJdT8IwFE183K84gQfaOAqDYJTAA4-GaST6aELq6KBL2ZatGI3hl_jCi_4of41dVz5MeLBrctdzzzm3ub2f32XEFe_vdl8bHbevfy6es5dERBp3XKYQb1qkixKTPMeHByxEDMOPNoprQR6GuE21j6mLoYuzIR51IdMltQDGVgu88gKzUJYVMmM6q34PCWXASVHwdxZLpciUEhL66FLqWUqcFSASoza62KRaKkyps3XJ5DRJbB2mRLrUK7QR4hIBPSoAGe9JpZKRIImPxJBCyqLMeJA5xmO0mi2KERSRlM2DUzksaO78PxOD04N26_2Nh55Yp5zraEXqkj0f91KZztbibd0LxdY8J_PqRqzcrD2X6HTwJIxRxEtRmnNunkCrlBwf7MpH4KPvo9Fk5ms2TEeMKjhLvvHRq8mGyVi1Hb93lh8MrGBgBaxaVQmzmJP1vW09ZG7W9jP3Cw" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<pre class="lang-scala prettyprint-override"><code>object Main extends App {
+  def calculate(P: Int, K: Int, L: Int, Q: String): Int = {
+    var QList = Q.toList
+    var l = Array.fill(K)((L, 0))
+
+    for (i &lt;- 0 until K) {
+      for (j &lt;- 0 until (QList.length - L + 1)) {
+        if (QList.slice(j, j + L).count(_ == '#') &lt; l(i)._1) {
+          l(i) = (QList.slice(j, j + L).count(_ == '#'), j)
+        }
+      }
+      QList = QList.patch(l(i)._2, Nil, L)
+    }
+
+    l.map(_._1).sum
+  }
+
+  // Test cases
+  println(calculate(6, 1, 3, &quot;#.#.##&quot;)) // 1
+  println(calculate(9, 2, 3, &quot;.##..#..#&quot;)) // 2
+  println(calculate(15, 2, 5, &quot;.#.....#.#####.&quot;)) // 3
+}
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 134 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>p,t,l=map(int,input().split())
 q=[(input(),0)]
@@ -42,7 +75,7 @@ for s,n in q:
 <p><a href="https://tio.run/##LYxBCsMgFET3nuJDFtEqn9rSja25SHBRSkoE@2Oqofb01kDfZmB4M/Gb54XOtUaVVbCve@SesvIUt8wFphh8S8FWO/J/qY7CsefyhqQIPMFqGBSb8LFslHmP/SGIweZhKm1KgsFn9mGCcotmle0mjaY42TyZxiK1cYqkFu5apNW16guc4MKww50Oux38AQ" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 <p>Full program, outputs via <a href="https://codegolf.meta.stackexchange.com/a/5330/87681">exit code</a></p>
 </div>
-<div id="pu1" class="pu"><h1>Python3, 229 bytes</h1>
+<div id="pu2" class="pu"><h1>Python3, 229 bytes</h1>
 <pre class="lang-py prettyprint-override"><code>from itertools import*
 def f(b,t,l):
  q,s=[(b,0)],[]
@@ -54,7 +87,7 @@ def f(b,t,l):
 </code></pre>
 <p><a href="https://tio.run/##bU5BbsMgELz7FXuEeKVA01aVK/fgbyAOJoGWxAYb40Ne74KrtklraXa1o53ZneEaP7w7vAxhWUzwPdioQ/S@m8D2gw9xV5y0AUMURuxoVcCIUy0SZVSikAUYH0DhEayDMa1XbrHNXLu516GNmqjsBLAGWmjdiTRVrURlZSmYLJWwJa8kdT5m17RKs3aae9JpR8TuIul@3623z3jJqvfg50FdSUOTkNX1mb7VsQo6zsHBseTrjbFMURtMlMrXKZFGLkOwLhJDBEeGX8VlagdKi58dQ@Ar2IrfQeLDlpLdg3/3W7DsffrjvX3E/9nZVobNj3eBJT7iM6XLJw" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1>Python 2, 154 bytes</h1>
+<div id="pu3" class="pu"><h1>Python 2, 154 bytes</h1>
 <pre class="lang-py prettyprint-override"><code>I,R=raw_input,range
 P,T,L=map(int,I().split())
 S=I()
@@ -115,7 +148,7 @@ hS                                sorted(                                       
 </code></pre>
 <p>Now, if only Pyth had multiple assignment to &gt;2 variables...</p>
 </div>
-<div id="pu3" class="pu"><h2>Haskell, 196 characters</h2>
+<div id="pu4" class="pu"><h2>Haskell, 196 characters</h2>
 
 <pre><code>import Data.List
 f=filter
