--- a/q/44946.html
+++ b/q/44946.html
@@ -26,13 +26,22 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>217</td><td>Scala 3</td><td>240716T122025Z</td><td><a href="https://codegolf.stackexchange.com/questions/44946/trucks-in-a-parking-lot/274196#274196">138 Aspe</a></td></tr>
-<tr d-ix="1"><td>134</td><td>Python 3</td><td>240716T082401Z</td><td><a href="https://codegolf.stackexchange.com/questions/44946/trucks-in-a-parking-lot/274193#274193">Jitse</a></td></tr>
+<tr d-ix="0"><td>130</td><td>Python 3</td><td>240716T082401Z</td><td><a href="https://codegolf.stackexchange.com/questions/44946/trucks-in-a-parking-lot/274193#274193">Jitse</a></td></tr>
+<tr d-ix="1"><td>217</td><td>Scala 3</td><td>240716T122025Z</td><td><a href="https://codegolf.stackexchange.com/questions/44946/trucks-in-a-parking-lot/274196#274196">138 Aspe</a></td></tr>
 <tr d-ix="2"><td>229</td><td>Python3</td><td>240715T223722Z</td><td><a href="https://codegolf.stackexchange.com/questions/44946/trucks-in-a-parking-lot/274186#274186">Ajax1234</a></td></tr>
 <tr d-ix="3"><td>154</td><td>Python 2</td><td>150126T063449Z</td><td><a href="https://codegolf.stackexchange.com/questions/44946/trucks-in-a-parking-lot/44952#44952">Sp3000</a></td></tr>
 <tr d-ix="4"><td>196</td><td>Haskell</td><td>150126T045305Z</td><td><a href="https://codegolf.stackexchange.com/questions/44946/trucks-in-a-parking-lot/44948#44948">MtnViewM</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.scala-lang.org/" rel="nofollow noreferrer">Scala 3</a>, 217 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 130 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>p,t,l=map(int,input().split())
+q=[(input(),0)]
+for s,n in q:q+=[(s[s.count('.'*l)&gt;=t&gt;exit(n):x]+'.'+s[x+1:],n+1)for x in range(p)]
+</code></pre>
+<p><a href="https://tio.run/##LYxBCsMgFET3nkJwEX@VT9OSjWAuElyEkrZC@mOiAXt6q9DZDLzhTfim90b3UoJOerWfOUhPSXsKZ5KAMay@NrDdTvIP9RUce24Hj5q4J76bXdU1ThEf20lJdthdVhhtGpdcbQKTnapQxSmr3jhNqod2kJt@zPRaZABXSj/wGx8YCmwRKFrwBw" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<p>Full program, outputs via <a href="https://codegolf.meta.stackexchange.com/a/5330/87681">exit code</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.scala-lang.org/" rel="nofollow noreferrer">Scala 3</a>, 217 bytes</h1>
 <p>A port of <a href="http://pastebin.com/ugv4zujB" rel="nofollow noreferrer">@Etaoin Shrdlu's Python code</a> in Scala.</p>
 <p>217 bytes, it can be golfed more.</p>
 <hr />
@@ -63,17 +72,6 @@
   println(calculate(15, 2, 5, &quot;.#.....#.#####.&quot;)) // 3
 }
 </code></pre>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 134 bytes</h1>
-
-<pre class="lang-python prettyprint-override"><code>p,t,l=map(int,input().split())
-q=[(input(),0)]
-for s,n in q:
- x=s.count('.'*l)&gt;=t&gt;exit(n)
- while x&lt;p:q+=[(s[:x]+'.'+s[x+1:],n+1)];x+=1
-</code></pre>
-<p><a href="https://tio.run/##LYxBCsMgFET3nuJDFtEqn9rSja25SHBRSkoE@2Oqofb01kDfZmB4M/Gb54XOtUaVVbCve@SesvIUt8wFphh8S8FWO/J/qY7CsefyhqQIPMFqGBSb8LFslHmP/SGIweZhKm1KgsFn9mGCcotmle0mjaY42TyZxiK1cYqkFu5apNW16guc4MKww50Oux38AQ" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
-<p>Full program, outputs via <a href="https://codegolf.meta.stackexchange.com/a/5330/87681">exit code</a></p>
 </div>
 <div id="pu2" class="pu"><h1>Python3, 229 bytes</h1>
 <pre class="lang-py prettyprint-override"><code>from itertools import*
