--- a/q/274051.html
+++ b/q/274051.html
@@ -26,16 +26,68 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>325</td><td>JavaScript Node.js</td><td>240715T014809Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274166#274166">Andrew B</a></td></tr>
-<tr d-ix="1"><td>176</td><td>JavaScript ES6</td><td>240710T124848Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274057#274057">Arnauld</a></td></tr>
-<tr d-ix="2"><td>183</td><td>Python 3.8 prerelease</td><td>240710T191252Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274062#274062">squarero</a></td></tr>
-<tr d-ix="3"><td>150</td><td>Ruby</td><td>240710T194631Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274063#274063">Level Ri</a></td></tr>
-<tr d-ix="4"><td>079</td><td>K ngn/k</td><td>240710T125605Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274058#274058">ovs</a></td></tr>
-<tr d-ix="5"><td>318</td><td>Regenerate</td><td>240711T000011Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274068#274068">DLosc</a></td></tr>
-<tr d-ix="6"><td>572</td><td>sed 4.2.2</td><td>240710T061928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274053#274053">guest430</a></td></tr>
-<tr d-ix="7"><td>041</td><td>Charcoal</td><td>240710T073253Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274054#274054">Neil</a></td></tr>
+<tr d-ix="0"><td>578</td><td>Elisp</td><td>240716T135823Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274198#274198">Samuel J</a></td></tr>
+<tr d-ix="1"><td>325</td><td>JavaScript Node.js</td><td>240715T014809Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274166#274166">Andrew B</a></td></tr>
+<tr d-ix="2"><td>176</td><td>JavaScript ES6</td><td>240710T124848Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274057#274057">Arnauld</a></td></tr>
+<tr d-ix="3"><td>183</td><td>Python 3.8 prerelease</td><td>240710T191252Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274062#274062">squarero</a></td></tr>
+<tr d-ix="4"><td>150</td><td>Ruby</td><td>240710T194631Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274063#274063">Level Ri</a></td></tr>
+<tr d-ix="5"><td>079</td><td>K ngn/k</td><td>240710T125605Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274058#274058">ovs</a></td></tr>
+<tr d-ix="6"><td>318</td><td>Regenerate</td><td>240711T000011Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274068#274068">DLosc</a></td></tr>
+<tr d-ix="7"><td>572</td><td>sed 4.2.2</td><td>240710T061928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274053#274053">guest430</a></td></tr>
+<tr d-ix="8"><td>041</td><td>Charcoal</td><td>240710T073253Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274054#274054">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 325 bytes</h1>
+<div id="pu0" class="pu"><h1>Elisp, 578 bytes</h1>
+<pre><code>(setq s (+(*(- n 1)2)1))(defun o (s)(save-excursion(cl-loop for x below 5 do(if (not (= (or (char-after) ?\C-j) ?\C-j))(delete-char 1)))(insert s))(next-line))(defun d (x y)(goto-char (+ (* y (+ (* s 6)1)) x))(o &quot; / \\ &quot;)(o &quot;|\\ /|&quot;)(o &quot;| | |&quot;)(o &quot; \\|/ &quot;))(with-temp-buffer(newline (* s 3))(string-insert-rectangle 0 (point-max) (make-string (* s 6) ? ))(cl-loop for c to (1- s) do(let ((x (1+ (*(abs(-(/ s 2)c))2)))(y (* c 3)))(d x y)(d (+(1- (-(* s 3)x)) (1- s)) y)))(cl-loop for c to (- n 3) do(let ((x (+ s (* (1+ c) 4))))(d x 0)(d x (* (1- s) 3))))(princ (buffer-string)))
+</code></pre>
+<p>Had some fun drawing each cube one at a time instead of a &quot;top down&quot; approach. Huge respect to those that where able to do it that way</p>
+<pre><code>#!/usr/bin/emacs --script
+(require 'cl-lib)
+(setq next-line-add-newlines t)
+(setq n (string-to-number (pop argv)))
+(setq square-count (+(*(- n 1)2)1))
+(defun overwrite (s)
+  (save-excursion
+  (cl-loop for x below 5 do
+       (if (not (= (or (char-after) ?\C-j) ?\C-j))
+       (delete-char 1)
+     )
+       )
+  (insert s)
+  )
+  (next-line)
+  )
+
+(defun cube (x y)
+  (message &quot;drawing cube at %s %s&quot; x y)
+  (goto-char (+ (* y (+ (* square-count 6)1)) x))
+  (overwrite &quot; / \\ &quot;)
+  (overwrite &quot;|\\ /|&quot;)
+  (overwrite &quot;| | |&quot;)
+  (overwrite &quot; \\|/ &quot;)
+  )
+
+(with-temp-buffer
+  (newline (* square-count 3))
+  (string-insert-rectangle 0 (point-max) (make-string (* square-count 6) ? ))
+  (cl-loop for c to (1- square-count) do
+       (let ((x (1+ (*(abs(-(/ square-count 2)c))2)))
+         (y (* c 3)))
+     (cube x y)
+     (cube (+(1- (-(* square-count 3)x)) (1- square-count)) y)
+     ))
+  ;; top and bot row
+  (cl-loop for c to (- n 3) do
+       (let ((x (+ square-count (* (1+ c) 4))))
+     (cube x 0)
+     (cube x (* (1- square-count) 3))
+     )
+       )
+
+  (princ (buffer-string))
+  )
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 325 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>n=&gt;{w=8*n-3
 h=n*6-2
@@ -53,7 +105,7 @@ q(u,h-t-1)}return o.map(z=&gt;z.join``).join`\n`}
 </code></pre>
 <p><a href="https://tio.run/##XY/djoIwEIXveYqJN7TAoAtqNsEh2ecQE8huEUhtteL6h8/OFvBq04tz5pv09LQpfovzt6mPLSr9I/qSekXp80qfnsLYqUh5a4wcTV/GFHdW8bCspWQLHh6KI7tROvHrm7vgcu6ciN2CO6fUhTlkGXZZBvMOO7AHLejmbng@yrrNMR9zGkqbN8mnZFYGextQToMMDnbQ27u/321v/mFH0j5TasMELRKxUYnwff40tm2EkS@8pdMSUyi4FzsXuuIKI084J2aCBR9lbb@3HqzlQYvxZMcrGAUVxp7A5QAv4xZgtBW2@MFfRrQXo0CP5R6UPsJG12qoPmqm8lc/lJOiBQUEUWJlQ7CyanvC0wH41uqspQil3rOZohn4oHjyb1EyxS189X8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1>JavaScript (ES6), 176 bytes</h1>
+<div id="pu2" class="pu"><h1>JavaScript (ES6), 176 bytes</h1>
 <p>Builds the output character by character.</p>
 <pre class="lang-javascript prettyprint-override"><code>n=&gt;(y=h=n*6-2,n+=n-1,g=x=&gt;y?`| /\\
 `[X=w-x-n,s=y&gt;h/2,c=x-n&gt;4&amp;X&gt;4,~x?x--&lt;n|X&lt;0|y&gt;4&amp;y&lt;h-3&amp;c||`03123${y/h|y==4*c}210101`[y%3*4|X-y%3*s*2&amp;3]:(n+=y--%3&amp;&amp;-s|1,x=w,4)]+g(x):&quot;&quot;)(w=n*4)
@@ -126,7 +178,7 @@ q(u,h-t-1)}return o.map(z=&gt;z.join``).join`\n`}
 )(w = n * 4)              // initial call to g with x = w = 4n
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 314 </s> <s> 259 </s> <s> 239 </s> <s> 233 </s> <s> 229 </s> <s> 197 </s> <s> 189 </s> 183 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 314 </s> <s> 259 </s> <s> 239 </s> <s> 233 </s> <s> 229 </s> <s> 197 </s> <s> 189 </s> 183 bytes</h1>
 <p><em>-55 bytes by encoding the character positions as a list.</em><br />
 <em>-20 bytes by <s>cheating</s> returning a 2D list, thanks to noodle person.</em><br />
 <em>-6 bytes by using unprintables.</em><br />
@@ -147,7 +199,7 @@ q(u,h-t-1)}return o.map(z=&gt;z.join``).join`\n`}
 The <code>\12</code> in the unprintable string is literal.</p>
 <p><a href="https://tio.run/##JctRS8MwFAVgRJRZRDZ/wQUpN0ud6Trrykr@QvHJlzTI1BUr9bZkcaSw/17T7TwdPs7pevvd0irrzDB87SqoGM03ATiZcMobqdbccbXXVWtgDzUhIE@503kvCxkHMPrBO3zg59vLQ/yK/nzSd68q1pxGOIk97y4vrsplcj25nU3vb@5w06g@skKkWrnIhqmWWIrjEVURPuu8iORy/LtIHoTIFlne@xZmi1UAZmf/DEEzdKYmy7AkfPppa2K/247huT9WLJn7DP8" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>166</s> 150 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>166</s> 150 bytes</h1>
 
 <pre class="lang-ruby prettyprint-override"><code>-&gt;n{w=6*v=n*4
 s=(?.*w+$/)*w
@@ -160,13 +212,13 @@ s}
 <p>Function that returns a newline separated string.</p>
 <p>Starts with a blank newline separated string, then adds one cube at a time, each cube built from 4 lines.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 79 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 79 bytes</h1>
 <pre><code>{`0:&quot;\\/|&quot;(3|=8*x).[;;&amp;;+5 4#4\3947690525]/(x+x+!'4 5)+\+-4+9\,/1_'x#'&quot;,EA$&quot;}
 </code></pre>
 <p><a href="https://ngn.codeberg.page/k#eJwFwUESQCAUANB9Fq6QGOEj9EMaCwun8A0rZ2hG7u69Z3nvbhFEKohCh3WufNkezuUODMcUSVucRtuZwZyq8OAhkchNCQQNgqVa9Zf0qRT1vmVRLD7GHjlwzdH99dEUfg==" rel="nofollow noreferrer">Try it online!</a></p>
 <p>Inserts one cube at a time in clockwise order: <a href="https://ngn.codeberg.page/k#eJwFwUEOQDAQAMA7B1+gxGLR0i2qcXDwCiucvKEJ/m7mnp9LzSCY5SsK/S5T5ct2dy53aGJKibWlcbDK9ObgwqPHBCg2JTI2hJZr2Z3gUxD1tmZhJL4guEG7H7siFCw=" rel="nofollow noreferrer">&quot;animation&quot;</a></p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/dloscutoff/Esolangs/tree/master/Regenerate" rel="nofollow noreferrer">Regenerate</a>, 318 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/dloscutoff/Esolangs/tree/master/Regenerate" rel="nofollow noreferrer">Regenerate</a>, 318 bytes</h1>
 <pre><code>( {2*$~1-2}) ( / \\){$~1}
 ($1 (\|\\ /){$~1}\|
 )($1( \|){#1+3}
@@ -186,7 +238,7 @@ $3$5 $1$7{$~1}
 <p>Generates the figure line by line. With reference to the N = 3 diagram, the output always contains one copy of the first four lines, then N-2 copies of the next three, then one copy of the next two, then N-2 copies of the next three, and finally one copy of the last four. These roughly correspond to the lines of the program, except that the last line of the program generates the last three lines of the output.</p>
 <p>This could probably be a bit shorter, but right now I'm tired of counting backreferences. :P</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="noreferrer">sed 4.2.2</a>, <s>573</s> 572 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="noreferrer">sed 4.2.2</a>, <s>573</s> 572 bytes</h1>
 <pre><code>h;s!.! / \\!g;x;s/.//;s/./  /g;G;s/\n//p
 s! /!|/!g;y|\\/|/\\|;s/$/|/p;h
 s!\\ /! | !gp
@@ -234,7 +286,7 @@ T;s!\n\( *\)\n\1!!;t;s/\n *\n *//p;tk
 <p><a href="https://tio.run/##TVJBboNADLzvK9YSQikHrDQ3/IB8ILe4kYgagRQF0ZBDK/nvdGxImxW72h0PnmGW6fI5z71MVFPmrEqdfMvENXOsOXMne2x1YB7TBBIZg/RjqmysaigW2I3So6wKQrZM3ZjQB3QDH0dpWhwLEMhhI4DezzWNMsaqbHUF7b07qnVTV/qmg25Jt@a9jdxDjHD7BzJeK3Xwh0FZcYMVo12XDiEap1CE@k4Od2cGuGBouJNzn@B1hJUTRPjWibvMagaPZTgF1vQS9Uebmju42XSAhWz87Jl1k@F@VYWxp4ZuFwsk50tqri4UOd8k8nOBJSWLvVGXmovXhuNJh4@qoLKkSOh4ygAo0/v6iYgqRCMykkdcHABMXJ88rql5FVkyBG18NcHQ9UsIQ86oIcmUmi//JTAKLkvkMs9tm9plPtf/8Qs" rel="noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
 <p>this one doesn't work yet (the last line of cubes is proving particularly hard to measure) but doing it this way might make it easier to golf.</p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="noreferrer">Charcoal</a>, 41 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="noreferrer">Charcoal</a>, 41 bytes</h1>
 <pre><code>ＮθＦ²Ｆ³Ｆθ«Ｆ³Ｍ∨μ¹✳⁺×⁴ι×μ⁻¹κＰ↑”{⊟∨÷ＩＤＲ▶#⟲⁹⁰e
 </code></pre>
 <p><a href="https://tio.run/##NUu7DoIwFJ3hK26YbpMaAjrp6uKAMuh2FyQ1NpYWSssifnstPs5y3u29sa1pVAgH3Xt39N1VWBzYLr0ZC1gy@PD6xwODZ5r8o8pMAk8WOw4F47CXVrROGo218iOeZSdG3HCQsfuaOKykjl3B4cEW7NKk8srJ2krtcHvpOWQwz6SJgCgnvegcciLSMc/i4RVCGVaTegM" rel="noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Uses the alternative input scheme where the input is a sixth of the number of cubes. Explanation:</p>
