--- a/q/274225.html
+++ b/q/274225.html
@@ -26,23 +26,40 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>099</td><td>JavaScript ES6</td><td>240718T064538Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274234#274234">Arnauld</a></td></tr>
-<tr d-ix="1"><td>051</td><td>Charcoal</td><td>240718T083302Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274238#274238">Neil</a></td></tr>
-<tr d-ix="2"><td>104</td><td>Python 3.8 prerelease</td><td>240718T071207Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274237#274237">Jitse</a></td></tr>
-<tr d-ix="3"><td>008</td><td>05AB1E</td><td>240718T065430Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274235#274235">Kevin Cr</a></td></tr>
-<tr d-ix="4"><td>085</td><td>R</td><td>240718T061307Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274232#274232">pajonk</a></td></tr>
-<tr d-ix="5"><td>058</td><td>Arturo</td><td>240718T031557Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274228#274228">chunes</a></td></tr>
-<tr d-ix="6"><td>055</td><td>Factor + math.combinatorics</td><td>240718T020251Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274227#274227">chunes</a></td></tr>
-<tr d-ix="7"><td>006</td><td>Vyxal</td><td>240718T013914Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274226#274226">emanresu</a></td></tr>
+<tr d-ix="0"><td>007</td><td>Jelly</td><td>240718T104737Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274240#274240">Jonathan</a></td></tr>
+<tr d-ix="1"><td>099</td><td>JavaScript ES6</td><td>240718T064538Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274234#274234">Arnauld</a></td></tr>
+<tr d-ix="2"><td>051</td><td>Charcoal</td><td>240718T083302Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274238#274238">Neil</a></td></tr>
+<tr d-ix="3"><td>104</td><td>Python 3.8 prerelease</td><td>240718T071207Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274237#274237">Jitse</a></td></tr>
+<tr d-ix="4"><td>008</td><td>05AB1E</td><td>240718T065430Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274235#274235">Kevin Cr</a></td></tr>
+<tr d-ix="5"><td>085</td><td>R</td><td>240718T061307Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274232#274232">pajonk</a></td></tr>
+<tr d-ix="6"><td>058</td><td>Arturo</td><td>240718T031557Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274228#274228">chunes</a></td></tr>
+<tr d-ix="7"><td>055</td><td>Factor + math.combinatorics</td><td>240718T020251Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274227#274227">chunes</a></td></tr>
+<tr d-ix="8"><td>006</td><td>Vyxal</td><td>240718T013914Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274226#274226">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 99 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 7 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>Œ!ÄA$ÞḢ
+</code></pre>
+<p>A monadic Link that accepts a list of integers and yields one with the minimal maximum absolute prefix sum.</p>
+<p><strong><a href="https://tio.run/##y0rNyan8///oJMXDLY4qh@c93LHo////0bqmOromOoY6RjrGsQA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong></p>
+<h3>How?</h3>
+<p>Find a permutation with minimal absolute prefix sums (which is necessarily one of the permutations with a minimal maximum absolute prefix sum).</p>
+<pre><code>Œ!ÄA$ÞḢ - Link: list of integers, A
+Œ!      - all permutations of A
+     Þ  - sort by:
+    $   -   last two links as a monad:
+  Ä     -     cumulative sums
+   A    -     absolute value (vectorises)
+      Ḣ - head
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES6), 99 bytes</h1>
 <p>Naive method trying all possible permutations.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>f=(a,s=M=f,m,...p)=&gt;a.map((v,i)=&gt;f(a.filter(_=&gt;i--),q=~~s+v,q*q&lt;m?m:q*q,...p,v))+a||m&gt;M?o:(M=m,o=p)
 </code></pre>
 <p><a href="https://tio.run/##bYtBCoMwEEX3PcmkTgJtFYp09ASeoJQyWFNSjIlGshKvnkqXxdXnv/f/hyOHdjJ@loN7dSlpAsZADWm0qJTygipWlj1ARLMVDay06edugidVRkqBI61ryCKOx/Fma1tu@btiFCLjZbFVU7sSGrLoyIvUuiG4vlO9e4OG@@khxOGf4RkvmGOx42SBMsffYs9eMd9w@gI" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 51 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 51 bytes</h1>
 <pre><code>⊞υ⟦⟧Ｆθ≔ΣＥυＥ⁻Ｅθνκ⁺κ⟦μ⟧υＦυＵＭι§θκ≔Ｅυ⌈↔ＥιΣ…ι⊕μη⭆¹§υ⌕η⌊η
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=RZA7agMxEIZxm1MIVxLMFs4DAq6WhYALw4LLRcVaK1ti9YhXUnDOksZFQtLlPjlNRrITC8TAP_rmG_T2JVQ_Cd-b0-kjxV31-DObtSkomoB0nC1vdn4i9MBIHYLeO7pJlq7759zOZa1dCiU4AHEMyIi3NZiNyFvO8ABJf3MSy1Tjre3dQDWQOq7cII-ZHhm-ulj-DUdtUVhvgzcpypIjlZdoXoWRjfIlWDkxSStdlAO17HyAKBzYTtpFuolY9pleXJ0oeNK4hkKRdkWkCrl8D1sRLv_x2c2rFzPn311XPUB1Dwu4hTvOz91f" rel="nofollow noreferrer">Attempt This Online!</a> Link is to verbose version of code. Explanation:</p>
@@ -59,13 +76,13 @@
 </code></pre>
 <p>Output the permutation with the minimum sum.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 104 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 104 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda a:a and min(([x]+f((a:=a[1:]+[x])[:-1])for x in a),key=lambda b,i=0:max(abs(i:=i+y)for y in b))
 </code></pre>
 <p><a href="https://tio.run/##NY7BboQwDETv@xW@rSPMCgoroUhZqd8R5RBEEFEhiUK2ha@ngaoHH8bzZuywp8m7pgvxOEYx66UfNGiexw2wWIcoN1WMiJoLLWuuiqyZ5GWt2OgjbGAdaEZfZv9P92RFxRe9oe5XtFzYYr/Y/WR7xo5TzNaZU/tgHFaM3yCrAALMt57xdB9rmG3Cu3jdmawUy0SI1iUcMZO5Rtb0QQ219FQgXoCfbgcfBxPZTZZPKlu6gMu82LxpqMw05gd8mkyE1c/vZL1b4cemCfLtt4HmLOio/Uu2VHbqFw" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 8 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 8 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>œΣηOÄà}н
 </code></pre>
 <p><a href="https://tio.run/##ASUA2v9vc2FiaWX//8WTzqPOt0/DhMOgfdC9//9bLTUsLTQsMSwyLDNd" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/V9Waa@k8KhtkoKSfeX/o5PPLT633f9wy@EFtRf2/tf5Hx1tqGOkY6xjomMaqxOta6qja6IDFgHxLHRMYmMB" rel="nofollow noreferrer">verify all test cases</a><br />
@@ -83,7 +100,7 @@ or <a href="https://tio.run/##yy9OTMpM/V9Waa@k8KhtkoKSfeX/o5PPLT633f9wy@EFtXrnNs
         # (which is output implicitly as result)
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 85 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 85 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>`?`=\(x,y={})`if`(sum(x|1),x[j&lt;--order(sapply(x,\(i)abs(sum(y,i))))[1]]?c(y,x[-j]),y)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=NY5BboNADEX3PYWlbmzJsyCAxCIE9RBZkZEgFJSJKBPNQMuI5CTd0Eg5VG5TQog31refn_z7Z8ZrFd-6thLRfZslWbzDnl08XChTVYa2-8L-7BH36XEthDafpUGbn061m7gdKsr3dqYcK5oq9aRMiin1qThKYkeLfKiwQI9X7HPAIdE7xBvAj8bBLKW3x16ELAKeqYVIH2Ga-SxCCagN6PZQGrC67lqlGws_qj3Ad153JfiLJeLgdR6wiOTzhXF89n8" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -96,7 +113,7 @@ f(x[-j],y)
 } else y
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 58 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 58 bytes</h1>
 <pre><code>$=&gt;[minimum permutate&amp;'p-&gt;max map size p=&gt;[abs∑take p&amp;]]
 </code></pre>
 <p><a href="http://arturo-lang.io/playground?n5PEWA" rel="nofollow noreferrer">Try it!</a></p>
@@ -110,7 +127,7 @@ abs                     ; absolute value
 take p&amp;                 ; current prefix of current permutation
 </code></pre>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://factorcode.org/" rel="nofollow noreferrer">Factor</a> + <code>math.combinatorics</code>, 55 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://factorcode.org/" rel="nofollow noreferrer">Factor</a> + <code>math.combinatorics</code>, 55 bytes</h1>
 <pre><code>[ &lt;permutations&gt; [ cum-sum vabs supremum ] infimum-by ]
 </code></pre>
 <p><a href="https://tio.run/##LY47DsIwEET7nGIu4Ej8GkC0iIYGUUUpbGsjLGIneNeRIsTZjSPo5s2bYjptZYj5frtcz3uMkUTmMbog8Foe9USLZjwpBurB9EoULPHP2sEbF3RZOPuvWLQ4loUPVfWG2kFtscIaG3xyg@NI0adlNAQ@oYFNXnHymLRhcCoPfKEWLnSuJGVmtNnqvkedvw" rel="nofollow noreferrer" title="Factor – Try It Online">Try it online!</a></p>
@@ -121,7 +138,7 @@ take p&amp;                 ; current prefix of current permutation
 <li><code>supremum</code> largest</li>
 </ul>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="noreferrer">Vyxal</a>, 6 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="noreferrer">Vyxal</a>, 6 bytes</h1>
 <pre><code>Ṗ≬¦ȧG∵
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCLhuZbiiazCpsinR+KItSIsIiIsIlstNSwtNCwxLDIsM10iXQ==" rel="noreferrer">Try it Online!</a></p>
